# sdet-robot-automation-project

./: .gitignore  README.md  log.html  output.xml  pyproject.toml  report.html  requirements.txt
configs/: settings.yaml
sdet_robot_automation_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
serveRest/resources/: base.resource
serveRest/resources/actions/: actions_login.resource  actions_serverest_login.resource  actions_usuarios.resource
serveRest/resources/assertions/: assertions_login.resource  assertions_usuarios.resource
serveRest/tests/api/login/: postLogin.robot
serveRest/tests/api/produtos/: deleteProdutos.robot  getProdutos.robot  postProdutos.robot  putUsuarios.robot
serveRest/tests/api/usuarios/: deleteUsuarios.robot  getUsuarios.robot  postUsuarios.robot  putUsuarios.robot
tests/api/: example_api.robot  requirements.txt  serverest_login.robot
